--- a/fixture-web/src/main/webapp/WEB-INF/jspx/static/login.jspx
+++ b/fixture-web/src/main/webapp/WEB-INF/jspx/static/login.jspx
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          version="2.0" xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:spring="http://www.springframework.org/tags"
+          version="2.0" >
 
-    <!-- TODO Message bundles -->
+    <h2>
+        <spring:message code="static.login.title" />
+    </h2>
 
     <c:url var="url" value="/login/authenticate" />
-
     <form class="form-horizontal" action="${url}" method="post">
         <fieldset>
-            <legend>Log in</legend>
 
             <c:if test="${not empty SPRING_SECURITY_LAST_EXCEPTION}">
                 <div class="alert alert-error">
-                    <strong>Log in failed</strong>
+                    <strong>
+                        <spring:message code="static.login.error"/>
+                    </strong>
                     <c:if test="${not empty SPRING_SECURITY_LAST_EXCEPTION.message}">
                         <jsp:text> - </jsp:text>
                         <c:out value="${SPRING_SECURITY_LAST_EXCEPTION.message}" />
@@ -22,18 +26,20 @@
             </c:if>
 
             <div class="control-group">
-                <label class="control-label" for="username">Username</label>
-
+                <spring:message code="static.login.username" var="username" />
+                <label class="control-label" for="username">
+                    ${username}
+                </label>
                 <div class="controls">
-                    <input type="text" id="username" name="j_username" value="" placeholder="Username" />
+                    <input type="text" id="username" name="j_username" value="" placeholder="${username}" />
                 </div>
             </div>
 
             <div class="control-group">
-                <label class="control-label" for="password">Password</label>
-
+                <spring:message code="static.login.password" var="password" />
+                <label class="control-label" for="password">${password}</label>
                 <div class="controls">
-                    <input type="password" id="password" name="j_password" value="" placeholder="Password" />
+                    <input type="password" id="password" name="j_password" value="" placeholder="${password}" />
                 </div>
             </div>
 
@@ -41,9 +47,11 @@
                 <div class="controls">
                     <label class="checkbox">
                         <input type="checkbox" id="remember_me" name="_spring_security_remember_me" />
-                        <jsp:text>Remember me?</jsp:text>
+                        <spring:message code="static.login.remember-me"/>
                     </label>
-                    <button class="btn" type="submit">Log in</button>
+                    <button class="btn" type="submit">
+                        <spring:message code="static.login.login"/>
+                    </button>
                 </div>
             </div>
 
