--- a/fixture-web/src/main/webapp/WEB-INF/jspx/static/login.jspx
+++ b/fixture-web/src/main/webapp/WEB-INF/jspx/static/login.jspx
@@ -49,7 +49,7 @@
                         <input type="checkbox" id="remember_me" name="_spring_security_remember_me" />
                         <spring:message code="static.login.remember-me"/>
                     </label>
-                    <button class="btn" type="submit">
+                    <button class="btn" id="submit" type="submit">
                         <spring:message code="static.login.login"/>
                     </button>
                 </div>
