--- a/src/main/webapp/WEB-INF/jspx/registration/index.jspx
+++ b/src/main/webapp/WEB-INF/jspx/registration/index.jspx
@@ -25,7 +25,7 @@
           version="2.0">
 
     <h2>
-        <spring:message code="static.join.title" />
+        <spring:message code="registration.title" />
     </h2>
 
     <p>
