Added RegistrationService test and fixed bugs

--- a/src/main/resources/META-INF/velocity/registration-activation.vm
+++ b/src/main/resources/META-INF/velocity/registration-activation.vm
@@ -1,8 +1,8 @@
-Hi ${user.givenName},
+Hi ${profile.givenName},
 
 Go here to activate your account:
 
-    ${baseUrl}/register/activate/${activation.uuid}
+    ${baseUrl}/register/activate/${user.uuid}
 
 Thanks
 The fixture team
