--- a/src/main/webapp/WEB-INF/jspx/registration/index.jspx
+++ b/src/main/webapp/WEB-INF/jspx/registration/index.jspx
@@ -78,6 +78,7 @@
                         label="registration.index.accept.label" />
 
         <div class="form-actions">
+            <!-- TODO Message -->
             <form:button type="submit"
                          class="btn btn-primary">Register</form:button>
         </div>
