--- a/src/main/webapp/WEB-INF/jspx/base/template.jspx
+++ b/src/main/webapp/WEB-INF/jspx/base/template.jspx
@@ -20,11 +20,12 @@
   -->
 
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:spring="http://www.springframework.org/tags"
           xmlns:tags="urn:jsptagdir:/WEB-INF/tags"
           xmlns:tiles="http://tiles.apache.org/tags-tiles"
-          version="2.0" xmlns:c="http://java.sun.com/jsp/jstl/core">
+          version="2.0">
 
     <jsp:output omit-xml-declaration="true" />
     <jsp:output doctype-root-element="html" doctype-system="about:legacy-compat" />
@@ -35,8 +36,19 @@
         <head>
             <meta charset="utf-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
             <title>
-                <tiles:getAsString name="title" />
+                <c:set var="title">
+                    <tiles:getAsString name="title" />
+                </c:set>
+                <spring:message code="${title}" />
+                <c:set var="subTitle">
+                    <tiles:getAsString name="subTitle" defaultValue="" />
+                </c:set>
+                <c:if test="${not empty subTitle}">
+                    -
+                    <spring:message code="${subTitle}" />
+                </c:if>
             </title>
 
             <tiles:importAttribute name="headScripts" />
